option java_outer_classname = "LCMessageBroadcastInArea";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

import "core/proto/dataaccess/common/java/AreaInfo.proto";
import "core/proto/common/java/MessageSign.proto";

message MessageBroadcastInArea{
	required	AreaInfo	areaInfo	 =1;
	optional	string	broadcastContent =2;
    optional	MessageSign	signs        =3;
    optional	bool	saveSign         =4;
}
